# convolution_paid

./: .gitignore  CMakeLists.txt  README.md
.gitignore/: .gitignore
src/: constants.hpp  frequency_convolution.cpp  frequency_convolution.hpp  main.cpp  matplotlibcpp.h  param_parser.cpp  param_parser.hpp  plot.cpp  plot.hpp  runs_per_case.cpp  runs_per_case.hpp  space_convolution.cpp  space_convolution.hpp  tarea04.cpp  time_measure.cpp  time_measure.hpp
